--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_gravity="center"
+    android:orientation="vertical"
 
     tools:context=".MainActivity">
 
@@ -28,47 +27,45 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:gravity="center"
-        android:textAppearance="?android:textAppearanceLarge"
-        android:text="Log In" />
+        android:text="Log In"
+        android:textAppearance="?android:textAppearanceLarge" />
+
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="Email"
         android:id="@+id/email_login"
-        />
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-       android:hint="Password"
+        android:hint="Email" />
+
+    <EditText
         android:id="@+id/password_login"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:hint="Password" />
+
     <Button
+        android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="Log In"
-        android:textAppearance="?android:textAppearanceMedium"
-        android:id="@+id/btn_login"/>
+        android:textAppearance="?android:textAppearanceMedium" />
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
         android:id="@+id/forget_password"
-        android:text="Forget Password"
-        android:padding="5dp"/>
-    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:padding="5dp"
+        android:text="Forget Password" />
+
+    <TextView
         android:id="@+id/signup_reg"
-        android:text="Don't have account?Sign Up Here"
-        android:padding="5dp"/>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="Don't have account?Sign Up Here" />
 
 </LinearLayout>
