--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#274B6A</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#CD5022</color>
+    <color name="bgBottomNavigation">#fe485a</color>
 </resources>
