--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -10,11 +10,11 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="10dp"
         app:cardElevation="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_marginTop="?actionBarSize"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -181,7 +181,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="?actionBarSize"
             android:backgroundTint="#6A1B9A"
             android:src="@drawable/income"
             app:fabSize="normal" />
