--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -49,16 +49,14 @@
                         android:text="Expense"
                         android:textAppearance="?android:textAppearanceLarge"
                         android:textColor="@android:color/holo_red_dark" />
-
                 </RelativeLayout>
-
-
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
+                android:baselineAligned="false"
                 android:orientation="horizontal">
 
                 <RelativeLayout
@@ -89,16 +87,9 @@
                         android:text="000.00"
                         android:textAppearance="?android:textAppearanceLarge"
                         android:textColor="@android:color/holo_red_dark" />
-
                 </RelativeLayout>
-
-
             </LinearLayout>
-
-
         </LinearLayout>
-
-
     </androidx.cardview.widget.CardView>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -109,6 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="160dp">
 
@@ -117,6 +109,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginEnd="5dp"
                 android:layout_marginRight="5dp"
                 android:background="@color/nav_header"
                 android:padding="5dp"
@@ -136,22 +129,21 @@
                 android:visibility="invisible"
                 app:fabSize="mini"
                 app:pressedTranslationZ="12dp" />
-
-
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="90dp">
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp">
 
             <TextView
                 android:id="@+id/income_ft_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginEnd="5dp"
                 android:layout_marginRight="5dp"
                 android:background="@color/nav_header"
                 android:padding="5dp"
@@ -171,8 +163,6 @@
                 android:visibility="invisible"
                 app:fabSize="mini"
                 app:pressedTranslationZ="12dp" />
-
-
         </LinearLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -180,8 +170,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
+            android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="?actionBarSize"
             android:backgroundTint="#6A1B9A"
             android:src="@drawable/income"
             app:fabSize="normal" />
