fixed scrolling issue

--- a/app/src/main/res/layout/fragment_income2.xml
+++ b/app/src/main/res/layout/fragment_income2.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="?actionBarSize"
+    android:layout_marginBottom="?actionBarSize"
     android:background="@android:color/darker_gray">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -11,7 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:layout_marginTop="?actionBarSize"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/income_recycler_data" />
