--- a/app/src/main/res/layout-v21/fragment_dashboard.xml
+++ b/app/src/main/res/layout-v21/fragment_dashboard.xml
@@ -10,18 +10,19 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="10dp"
         app:cardElevation="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="?actionBarSize"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:baselineAligned="false">
+                android:orientation="horizontal">
 
                 <RelativeLayout
                     android:layout_width="0dp"
@@ -109,6 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
             android:layout_marginBottom="160dp">
 
             <TextView
@@ -117,6 +119,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp"
                 android:background="@color/nav_header"
                 android:padding="5dp"
                 android:text="Expense"
@@ -142,6 +145,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
             android:layout_marginBottom="120dp">
 
             <TextView
@@ -150,6 +154,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp"
                 android:background="@color/nav_header"
                 android:padding="5dp"
                 android:text="Income"
@@ -176,6 +181,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
             android:layout_marginBottom="?actionBarSize"
             android:backgroundTint="#6A1B9A"
             android:src="@drawable/income"
