--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".DashboardFragment">
+    tools:context=".ui.DashboardFragment">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
